--- a/rebar.config
+++ b/rebar.config
@@ -50,7 +50,7 @@
 
 {plugins, [
     {rebar3_thrift_compiler,
-        {git, "https://github.com/rbkmoney/rebar3_thrift_compiler.git", {tag, "0.2"}}}
+        {git, "https://github.com/rbkmoney/rebar3_thrift_compiler.git", {branch, "master"}}}
 ]}.
 
 {provider_hooks, [
