--- a/pom.xml
+++ b/pom.xml
@@ -5,43 +5,49 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.rbkmoney</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.5</version>
+        <groupId>dev.vality</groupId>
+        <artifactId>library-parent-pom</artifactId>
+        <version>1.0.0</version>
     </parent>
 
-    <groupId>com.rbkmoney</groupId>
     <artifactId>msgpack-proto</artifactId>
-    <version>1.0.1</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <name>Msgpack</name>
     <description>Generates jar artifact containing compiled thrift classes based on generated thrift IDL files</description>
-    <url>https://github.com/rbkmoney/msgpack-proto.git</url>
+    <url>https://github.com/valitydev/msgpack-proto.git</url>
 
     <developers>
         <developer>
-            <organization>RBK.money</organization>
-            <organizationUrl>https://rbk.money</organizationUrl>
+            <email>devs@vality.dev</email>
+            <organization>Vality</organization>
+            <organizationUrl>https://vality.dev</organizationUrl>
         </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/rbkmoney/msgpack-proto.git</connection>
-        <developerConnection>scm:git:ssh://github.com/rbkmoney/msgpack-proto.git</developerConnection>
-        <url>https://github.com/rbkmoney/msgpack-proto/tree/master</url>
+        <connection>scm:git:git://github.com/valitydev/msgpack-proto.git</connection>
+        <developerConnection>scm:git:ssh://github.com/valitydev/msgpack-proto.git</developerConnection>
+        <url>https://github.com/valitydev/msgpack-proto/tree/master</url>
     </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <revision>SNAPSHOT</revision>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.rbkmoney.woody</groupId>
+            <groupId>dev.vality.woody</groupId>
             <artifactId>woody-thrift</artifactId>
-            <version>[1.1.21,)</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 
@@ -84,7 +90,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -94,8 +100,8 @@
                         <configuration>
                             <relocations>
                                 <relocation>
-                                    <pattern>com.rbkmoney.msgpack</pattern>
-                                    <shadedPattern>com.rbkmoney.msgpack.v${commit.number}</shadedPattern>
+                                    <pattern>dev.vality.msgpack</pattern>
+                                    <shadedPattern>dev.vality.msgpack.v${commit.number}</shadedPattern>
                                 </relocation>
                             </relocations>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
