--- a/rebar.config
+++ b/rebar.config
@@ -48,6 +48,7 @@
 ]}.
 
 {plugins, [
+    {erlfmt, "1.0.0"},
     {rebar3_thrift_compiler,
         {git, "https://github.com/valitydev/rebar3_thrift_compiler.git", {tag, "0.4"}}}
 ]}.
