--- a/rebar.config
+++ b/rebar.config
@@ -49,6 +49,7 @@
 
 {plugins, [
     {erlfmt, "1.0.0"},
+    {rebar3_lint, "1.0.2"},
     {rebar3_thrift_compiler,
         {git, "https://github.com/valitydev/rebar3_thrift_compiler.git", {tag, "0.4"}}}
 ]}.
