TD-312: Switch to valitydev/thrift compiler v0.14.2.3 (#10)
* Add Erlang CI workflow
* Reuse common java workflows

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,5 @@
 %% Common project erlang options.
 {erl_opts, [
-
     % mandatory
     debug_info,
     warnings_as_errors,
@@ -49,21 +48,19 @@
 ]}.
 
 {plugins, [
+    {erlfmt, "1.0.0"},
     {rebar3_thrift_compiler,
-        {git, "https://github.com/valitydev/rebar3_thrift_compiler.git", {branch, "master"}}}
+        {git, "https://github.com/valitydev/rebar3_thrift_compiler.git", {tag, "0.4"}}}
 ]}.
 
 {provider_hooks, [
     {pre, [
         {compile, {thrift, compile}},
-        {clean  , {thrift, clean  }}
+        {clean, {thrift, clean}}
     ]}
 ]}.
 
 {thrift_compiler_opts, [
     {in_dir, "proto"},
-    {in_files, [
-        "msgpack.thrift"
-    ]},
-    {gen, "erlang:scoped_typenames"}
+    {gen, "erlang:app_namespaces"}
 ]}.
